# Sentinal-AI

./: .gitignore  ARCHITECTURE.md  LICENSE  NOTICE  README.md  agent.py  log.txt  memory.json  pyproject.toml  requirements.txt
sentinel_ai/: __init__.py  app.py  cli.py  config.py  memory.py  ollama_client.py  parsing.py  watcher.py
