[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
version = "0.1.0"
description = "Local AI log watcher and error analyzer powered by Ollama."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests==2.31.0",
  "watchdog>=5.0.0,<6",
]

[project.scripts]
sentinel-ai = "sentinel_ai.cli:main"

[tool.setuptools]
packages = ["sentinel_ai"]
